# herb

./: Cargo.toml  README.md  herb.json
src/: config.rs  drmecref.rs  lib.rs  main.rs  mcts.rs  minimax.rs  minimaxab.rs  othello.rs
