[package]
name = "herb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.29.0"
rand = "0.8.5"
byteorder = "1.5.0"
once_cell = "1.18.0"
rayon = "1.8.0"
serde = { version = "1.0.190", features = ["derive"] }
bincode = "1.3.3"
dirs = "5.0.1"
serde_json = "1.0.107"
tempfile = "3.8.1"
float-cmp = "0.9.0"
